# vehicle-image-search-eval

./: .gitignore  .pre-commit-config.yaml  README.md  demo.ipynb  hello.py  initial_exploration.ipynb  pyproject.toml  requirements.txt
scripts/: download_and_resize_imagenet1k_vehicles.py  download_flickr30k.py  find_and_resize_flickr30k_vehicle_images.py
src/: download_util.py  eval_retrieval.py  imagenet_classifier.py  meta_clip.py  resize_img.py
src/meta_clip/: __init__.py
src/open_clip/: README.md
vehicle_image_search/: qrels.csv  queries.csv
